--- a/activity-lookup-base-manufacture-modeling-lb1/activity-lookup-base-manufacture-modeling-lb1.csproj
+++ b/activity-lookup-base-manufacture-modeling-lb1/activity-lookup-base-manufacture-modeling-lb1.csproj
@@ -46,8 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExActivity.cs" />
-    <Compile Include="Component.cs" />
+    <Compile Include="Activity.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -56,6 +55,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimulationModel.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
